[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "actix"
# path = "src/actix.rs"

# [[bin]]
# name = "shuttle"
# path = "src/main.rs"

[dependencies]
# shared
shared = { version = "0.1.0", path = "../shared" }
# shuttle
shuttle-runtime = "0.18.0"
shuttle-actix-web = "0.18.0"
# db
shuttle-aws-rds = { version = "0.18.0", features = ["postgres"] }
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "json", "offline"] }
# static files
shuttle-static-folder = "0.18.0"
# actix
actix-web = "4.3.1"
tokio = "1.28.2"
# serde
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
# utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
async-trait = "0.1.68"

[dev-dependencies]
actix-rt = "2"
mockall = "0.11"
