[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared
shared = { version = "0.1.0", path = "../shared" }
# dioxus
dioxus = "0.3.2"
dioxus-web = "0.3.2"
# serde
serde = { version = "1.0.164", features = ["derive"] }
