[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared
shared = { workspace = true }
# dioxus
dioxus = "0.4.3"
dioxus-web = "0.4.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { workspace = true }
uuid = { workspace = true }
log = "0.4.19"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
