[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde
serde = { version = "1.0.164", features = ["derive"] }
# sqlx
sqlx = { version = "0.6.3" }
# utils
uuid = { version = "1.3.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
