[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
backend = ["sqlx"]

[dependencies]
# serde
serde = { version = "1.0.164", features = ["derive"] }

# Sqlx, only when the backend add this as dependency is compiled
sqlx = { version = "0.6.3", optional = true }

# utils
uuid = { version = "1.3.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
