[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
backend = ["sqlx"]

[dependencies]
# serde
serde = { workspace = true }
# Sqlx, only when the backend add this as dependency is compiled
sqlx = { workspace = true, optional = true }
# utils
uuid = { workspace = true }
chrono = { workspace = true }
