[package]
name = "api-actix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
api-lib = { version = "0.1.0", path = "../lib" }
shared = { version = "0.1.0", path = "../../shared" }
# db
sqlx =  "0.6.3"
# actix
actix-web = "4.3.1"
# utils
dotenv = "0.15"
# tracing
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
