[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
api-lib = { version = "0.1.0", path = "../lib" }
shared = { version = "0.1.0", path = "../../shared" }
# shuttle
shuttle-runtime = "0.18.0"
shuttle-actix-web = "0.18.0"
# db
# shuttle-aws-rds = { version = "0.18.0", features = ["postgres"] }
shuttle-shared-db = { version = "0.18.0", features = ["postgres"] }
sqlx = "0.6.3"
# static files
shuttle-static-folder = "0.18.0"
# actix
actix-web = "4.3.1"
tokio = "1.28.2"
