[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
api-lib = { workspace = true }
# shuttle
shuttle-runtime = "0.20.0"
shuttle-actix-web = "0.20.0"
# db
# shuttle-aws-rds = { version = "0.18.0", features = ["postgres"] }
shuttle-shared-db = { version = "0.20.0", features = ["postgres"] }
sqlx = { workspace = true }
# static files
shuttle-static-folder = "0.20.0"
# actix
actix-web = { workspace = true }
actix-files = { workspace = true }
tokio = "1.28.2"
